--- a/client/src/styles/itc.css
+++ b/client/src/styles/itc.css
@@ -22,10 +22,11 @@
 
 
 .part {
-    margin: 0 20px 0 0;
     white-space: nowrap;
     font-size: 15px;
     color: #7E868B;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-weight: 400;
 }
 .entry-header{
     font-size: 15px;
@@ -170,6 +171,8 @@
 }
 .new-editor{
     -webkit-text-size-adjust: 100%;
+    overflow-y: auto;
+    resize: vertical; 
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     box-sizing: border-box;
     color: inherit;
@@ -187,6 +190,9 @@
     outline: 0!important;
     width: 100%;
     height: 100px;
+    max-height: 200px; /* Set a maximum height for the textarea */
+    overflow-y: auto;  /* Enable vertical scrolling */
+    /* resize: vertical;  */
 }
 .reply .row{
     -webkit-text-size-adjust: 100%;
@@ -312,9 +318,12 @@
     line-height: 21px;
     margin: 0 0 15px;
     font-weight: 400;
-    color: #2a2e2e;
     font-style: normal;
     font-size: 17px;
+    color: #282f33;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-weight: 400;
+    -webkit-font-smoothing: subpixel-antialiased;
 }
 .comment-footer__action {
     color: #494e58;
@@ -390,3 +399,12 @@
 .heading_name {
     margin-left: 8px; /* Adjust this value as needed for the desired space */
   }
+  .disqus-comment-count{
+    font-size: 15px;
+    color: #7E868B;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-weight: 400;
+    margin-left: 4px;
+  }
+.comment_text{
+}
